--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,6 +5,12 @@
   .header-content {
     @include flex-between;
 
+    a.header-title {
+      font-size: $h1Size;
+      margin: 2rem 0;
+      font-family: $titleFont;
+      font-weight: 700;
+    }
     .header-title,
     a {
       color: $white;
@@ -28,7 +34,7 @@
         box-shadow: $cardShadow;
         border-radius: $cardRadius;
         position: absolute;
-        right: -2.72rem;
+        right: -1.1rem;
         list-style: none;
         top: 3.5rem;
         padding: 1.5rem;
