Added W03 Readings and excercise. Added Dark mode :D

--- a/sass/global/_global.scss
+++ b/sass/global/_global.scss
@@ -46,3 +46,9 @@ h3 {
     font-size: $h3SizeDesktop;
   }
 }
+
+/* DARK MODE */
+body.dark-mode {
+  color: $textColorDark;
+  background-color: $bodyBackgroundCDark;
+}
