--- a/sass/global/_vars.scss
+++ b/sass/global/_vars.scss
@@ -17,6 +17,9 @@ $codeBlockColorC: $lightOrange;
 $textColor: $black;
 $lightShadowC: rgba($black, .2);
 $shadowC: rgba($black, .4);
+//Dark mode colors
+$textColorDark: $grayLight;
+$bodyBackgroundCDark: $black;
 
 /***** CONTAINERS *****/
 $containerMax: 113.6rem;
